--- a/index.html
+++ b/index.html
@@ -351,8 +351,8 @@ $rename [Mod] NuttyB Raptors [Mini Bosses][No Rush][1_3x HP 1_3x QHP][No Mex]
                 mainTweaks: { label: "NuttyB Main Tweaks", type: "checkbox", commandBlocks: [], default: true, disabled: true },
                 evolvingCommanders: { label: "NuttyB Evolving Commanders", type: "checkbox", commandBlocks: [], default: true, disabled: true },
                 extraRaptors: { label: "Extra Raptors", type: "select", choices: [{ label: "None", value: "" }] }, // Add "None" option by default
-                tweakdefs1: { label: "Queen Health", type: "select", choices: [] },
-                tweakdefs2: { label: "Raptor Health", type: "select", choices: [] },
+                tweakdefs2: { label: "Raptor HP", type: "select", choices: [] },
+                tweakdefs1: { label: "Queen HP", type: "select", choices: [] },
                 otherCheckboxes: { type: "checkboxes", options: [] } // For all other checkboxes
             };
 
