--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 !unit_restrictions_nonukes 0
 !draft_mode disabled
 !unit_restrictions_notacnukes 0
-$welcome-message Lobby settings made with the Paste Machine https://docs.google.com/spreadsheets/d/1QSVsuAAMhBrhiZdTihVfSCwPzbbZWDLCtXWP23CU0ko
+$welcome-message Settings made with Raptor Configurator https://rcorex.github.io/nuttyb-config/
 !unit_market 0
 !evocom 0
 !nowasting all
